# sanskrit-lang

./: Cargo.toml  DESIGN.md  LICENSE  README.md  ROADMAP.md
examples/: adhikara.sutra  dosha.sutra  effects.sutra  fizzbuzz.sutra  ganita.sutra  guards.sutra  hello.sutra  kosha.sutra  paratva.sutra  pratyahara.sutra  samvada.sutra  sandhi.sutra  suchi.sutra
src/: ast.rs  bigint.rs  builtins.rs  check.rs  effect.rs  engine.rs  fmt.rs  lexer.rs  lib.rs  main.rs  names.rs  parser.rs  pretty.rs  samjna.rs
std/: core.sutra  ganita.sutra  io.sutra  sandhi.sutra  suchi.sutra  tarka.sutra  varna.sutra
tests/: integration.rs
